# LangGraphAgentSQL

./: .env.example  Dockerfile.prod  README.md  kubernetes.yaml  main.py  pyproject.toml  requirements.txt  temp.json
Data/: enterprise.db
content/: REPORTE_20260110130517603965.html
scripts/: main_multi_agente_chatbot.py  main_multi_agente_chatbot_sql.py
scripts/[Servidor MCP]/: calculadora_mcp.py  requirements.txt
source/: requirements.txt
src/: main_monolithicsql.py
src/agent/: AgenteDeAnalisis.py  AgenteDeChatbot.py  AgenteDeContexto.py  AgenteDeMemoriaLargoPlazo.py  AgenteDeVisualizacion.py  AgenteGenerativo.py
src/agent/AgenteDeBaseDeDatos/: AgenteDeBaseDeDatos.py  FuncionesAgenteDeBaseDeDatos.py  ToolsAgenteDeBaseDeDatos.py  UtilesAgenteDeBaseDeDatos.py  UtilesBaseDeDatosSQLite.py  UtilesBaseDeDatosTeradata.py
src/bdagcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/conf/: conf.py
src/multiagent/MultiAgenteChatbot/: FlujoMultiAgenteChatbot.py  MultiAgenteChatbot.py  NodosMultiAgenteChatbot.py  ObjetosMultiAgenteChatbot.py
src/util/: util_ia.py
